Properly support building Qt apps for Android
... via the androiddeployqt tool.

Fixes: QBS-991
Change-Id: I4a3abe977fee6a9d1657a4fd6c1b43709429da9f
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/lib/qtprofilesetup/templates.qrc
+++ b/src/lib/qtprofilesetup/templates.qrc
@@ -17,5 +17,6 @@
         <file>templates/quick.js</file>
         <file>templates/quick.qbs</file>
         <file>templates/plugin_support.qbs</file>
+        <file>templates/android_support.qbs</file>
     </qresource>
 </RCC>
