--- a/src/lib/qtprofilesetup/templates.qrc
+++ b/src/lib/qtprofilesetup/templates.qrc
@@ -16,5 +16,6 @@
         <file>templates/qmlcache.qbs</file>
         <file>templates/quick.js</file>
         <file>templates/quick.qbs</file>
+        <file>templates/plugin_support.qbs</file>
     </qresource>
 </RCC>
